# faster-data-generation

./: .dockerignore  .gitignore  Dockerfile  README.md
examples/pyfake-v1/: pyproject.toml
examples/pyfake-v1/pyfake/: __init__.py  benchmark.py  generate.py  generate_row.py
examples/pyfake-v2/: pyproject.toml
examples/pyfake-v2/pyfake/: generate.py
examples/rsfake-v1/: Cargo.toml
examples/rsfake-v1/src/: main.rs
examples/rsfake-v2/: Cargo.toml  schema.json
examples/rsfake-v2/src/: extract.rs  generate.rs  main.rs
