[tool.poetry]
name = "pyfake"
version = "0.0.2"
description = ""
authors = ["aprxi <mail@aprxi.com>"]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^21.0.1"
polars = "^0.20.0"

[tool.poetry.scripts]
pyfake = "pyfake.generate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
